ADDED: user date and time format HTML

--- a/ui/inspectors/system-section.reel/language-and-region.reel/language-and-region.html
+++ b/ui/inspectors/system-section.reel/language-and-region.reel/language-and-region.html
@@ -37,7 +37,7 @@
             },
             "bindings": {
                 "options" : {"<-": "@owner.timeFormatShortOptions"},
-                "selectedValue": {"<->": "@owner.userData.timeFormatShort"}
+                "selectedValue": {"<->": "@owner.user.attributes.userSettings.timeFormatShort"}
             }
         },
         "timeFormatMedium": {
@@ -48,7 +48,7 @@
             },
             "bindings": {
                 "options" : {"<-": "@owner.timeFormatMediumOptions"},
-                "selectedValue": {"<->": "@owner.userData.timeFormatMedium"}
+                "selectedValue": {"<->": "@owner.user.attributes.userSettings.timeFormatMedium"}
             }
         },
         "timeFormatLong": {
@@ -59,7 +59,7 @@
             },
             "bindings": {
                 "options" : {"<-": "@owner.timeFormatLongOptions"},
-                "selectedValue": {"<->": "@owner.userData.timeFormatLong"}
+                "selectedValue": {"<->": "@owner.user.attributes.userSettings.timeFormatLong"}
             }
         },
         "dateFormatShort": {
@@ -71,7 +71,7 @@
             },
             "bindings": {
                 "options" : {"<-": "@owner.dateFormatShortOptions"},
-                "selectedValue": {"<->": "@owner.userData.dateFormatShort"}
+                "selectedValue": {"<->": "@owner.user.attributes.userSettings.dateFormatShort"}
             }
         },
         "dateFormatMedium": {
@@ -82,7 +82,7 @@
             },
             "bindings": {
                 "options" : {"<-": "@owner.dateFormatMediumOptions"},
-                "selectedValue": {"<->": "@owner.userData.dateFormatMedium"}
+                "selectedValue": {"<->": "@owner.user.attributes.userSettings.dateFormatMedium"}
             }
         },
         "dateFormatLong": {
@@ -93,7 +93,7 @@
             },
             "bindings": {
                 "options" : {"<-": "@owner.dateFormatLongOptions"},
-                "selectedValue": {"<->": "@owner.userData.dateFormatLong"}
+                "selectedValue": {"<->": "@owner.user.attributes.userSettings.dateFormatLong"}
             }
         },
         "dateFormatFull": {
@@ -104,7 +104,7 @@
             },
             "bindings": {
                 "options" : {"<-": "@owner.dateFormatFullOptions"},
-                "selectedValue": {"<->": "@owner.userData.dateFormatFull"}
+                "selectedValue": {"<->": "@owner.user.attributes.userSettings.dateFormatFull"}
             }
         },
         "keymaps": {
