--- a/ui/inspectors/system-section.reel/language-and-region.reel/language-and-region.html
+++ b/ui/inspectors/system-section.reel/language-and-region.reel/language-and-region.html
@@ -7,7 +7,8 @@
     {
         "owner": {
             "properties": {
-                "element": {"#": "owner"}
+                "element": {"#": "owner"},
+                "dateConverter": {"@": "dateConverter"}
             }
         },
         "timezones": {
@@ -19,6 +20,91 @@
             "bindings": {
                 "options" : {"<-": "@owner.timezoneOptions"},
                 "selectedValue": {"<->": "@owner.generalData.timezone"}
+            }
+        },
+        "advancedSection": {
+            "prototype": "ui/controls/foldable-section.reel",
+            "properties": {
+                "element": {"#": "advancedSection"},
+                "title": "Date and Time Format"
+            }
+        },
+        "timeFormatShort": {
+            "prototype": "blue-shark/ui/field-select.reel",
+            "properties": {
+                "element": {"#": "timeFormatShort"},
+                "label": "Short"
+            },
+            "bindings": {
+                "options" : {"<-": "@owner.timeFormatShortOptions"},
+                "selectedValue": {"<->": "@owner.user.attributes.userSettings.timeFormatShort"}
+            }
+        },
+        "timeFormatMedium": {
+            "prototype": "blue-shark/ui/field-select.reel",
+            "properties": {
+                "element": {"#": "timeFormatMedium"},
+                "label": "Medium"
+            },
+            "bindings": {
+                "options" : {"<-": "@owner.timeFormatMediumOptions"},
+                "selectedValue": {"<->": "@owner.user.attributes.userSettings.timeFormatMedium"}
+            }
+        },
+        "timeFormatLong": {
+            "prototype": "blue-shark/ui/field-select.reel",
+            "properties": {
+                "element": {"#": "timeFormatLong"},
+                "label": "Long"
+            },
+            "bindings": {
+                "options" : {"<-": "@owner.timeFormatLongOptions"},
+                "selectedValue": {"<->": "@owner.user.attributes.userSettings.timeFormatLong"}
+            }
+        },
+        "dateFormatShort": {
+            "prototype": "blue-shark/ui/field-select.reel",
+            "properties": {
+                "element": {"#": "dateFormatShort"},
+                "converter": {"@": "dateConverter"},
+                "label": "Short"
+            },
+            "bindings": {
+                "options" : {"<-": "@owner.dateFormatShortOptions"},
+                "selectedValue": {"<->": "@owner.user.attributes.userSettings.dateFormatShort"}
+            }
+        },
+        "dateFormatMedium": {
+            "prototype": "blue-shark/ui/field-select.reel",
+            "properties": {
+                "element": {"#": "dateFormatMedium"},
+                "label": "Medium"
+            },
+            "bindings": {
+                "options" : {"<-": "@owner.dateFormatMediumOptions"},
+                "selectedValue": {"<->": "@owner.user.attributes.userSettings.dateFormatMedium"}
+            }
+        },
+        "dateFormatLong": {
+            "prototype": "blue-shark/ui/field-select.reel",
+            "properties": {
+                "element": {"#": "dateFormatLong"},
+                "label": "Long"
+            },
+            "bindings": {
+                "options" : {"<-": "@owner.dateFormatLongOptions"},
+                "selectedValue": {"<->": "@owner.user.attributes.userSettings.dateFormatLong"}
+            }
+        },
+        "dateFormatFull": {
+            "prototype": "blue-shark/ui/field-select.reel",
+            "properties": {
+                "element": {"#": "dateFormatFull"},
+                "label": "Full"
+            },
+            "bindings": {
+                "options" : {"<-": "@owner.dateFormatFullOptions"},
+                "selectedValue": {"<->": "@owner.user.attributes.userSettings.dateFormatFull"}
             }
         },
         "keymaps": {
@@ -40,6 +126,29 @@
             "bindings": {
                 "timezone": {"<->": "@owner.generalData.timezone"}
             }
+        },
+        "dateFormatTitle": {
+            "prototype": "ui/controls/inspector-section-title.reel",
+            "properties": {
+                "element": {"#": "dateFormatTitle"},
+                "value": "Date Format"
+            }
+        },
+        "dateConverter": {
+            "prototype": "montage/core/converter/date-converter"
+        },
+        "timeConverter": {
+            "prototype": "montage/core/converter/date-converter",
+            "properties": {
+                "pattern": "T"
+            }
+        },
+        "timeFormatTitle": {
+            "prototype": "ui/controls/inspector-section-title.reel",
+            "properties": {
+                "element": {"#": "timeFormatTitle"},
+                "value": "Time Format"
+            }
         }
     }
     </script>
@@ -48,7 +157,18 @@
     <div data-montage-id="owner" class="LanguageAndRegion">
         <div data-montage-id="keymaps"></div>
         <div data-montage-id="timezones"></div>
-        <div data-montage-id="timezonepicker"></div>
+        <div data-montage-id="timezonepicker" class="g-margin-bottom"></div>
+        <div data-montage-id="advancedSection">
+            <div data-montage-id="dateFormatTitle"></div>
+            <div data-montage-id="dateFormatShort"></div>
+            <div data-montage-id="dateFormatMedium"></div>
+            <div data-montage-id="dateFormatLong"></div>
+            <div data-montage-id="dateFormatFull"></div>
+            <div data-montage-id="timeFormatTitle"></div>
+            <div data-montage-id="timeFormatShort"></div>
+            <div data-montage-id="timeFormatMedium"></div>
+            <div data-montage-id="timeFormatLong"></div>
+        </div>
     </div>
 </body>
 </html>
