Make volume mandatory on vm creation

--- a/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine.html
+++ b/ui/sections/vms/inspectors/virtual-machine.reel/virtual-machine.html
@@ -175,10 +175,10 @@
                 "value": {"<-": "@owner.object.target"}
             }
         },
-        "volumeEdit": {
+        "target": {
             "prototype": "blue-shark/ui/field-select.reel",
             "properties": {
-                "element": {"#": "volumeEdit"},
+                "element": {"#": "target"},
                 "label": "Volume",
                 "converter": {"@": "volumeOptionConverter"}
             },
@@ -372,7 +372,7 @@
                 <div data-montage-id="vmTemplateDisplay" data-arg="display"></div>
             </div>
             <div data-montage-id="volumeSubstitution">
-                <div data-montage-id="volumeEdit" data-arg="edit"></div>
+                <div data-montage-id="target" data-arg="edit"></div>
                 <div data-montage-id="volumeDisplay" data-arg="display"></div>
             </div>
             <div data-montage-id="bootloader"></div>
