Fix network-interface ip addresses management
Ticket: #17344
Ticket: #17195
Ticket: #17472

--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -52,7 +52,7 @@
             }
         },
         "network": {
-            "prototype": "../network/network.reel",
+            "prototype": "ui/sections/network/network.reel",
             "properties": {
                 "element": {"#": "network"}
             }
