--- a/ui/controls/inspector-section-title.reel/inspector-section-title.html
+++ b/ui/controls/inspector-section-title.reel/inspector-section-title.html
@@ -18,13 +18,24 @@
             "bindings": {
                 "value": {"<-": "@owner.value"}
             }
+        },
+        "subtitle": {
+            "prototype": "montage/ui/text.reel",
+            "properties": {
+                "element": {"#": "subtitle"}
+            },
+            "bindings": {
+                "value": {"<-": "@owner.subtitle"},
+                "classList.has('is-hidden')": {"<-": "!value"}
+            }
         }
     }
     </script>
 </head>
 <body>
     <div data-montage-id="owner" class="InspectorSectionTitle">
-        <div data-montage-id="title" class="InspectorSectionTitle-text"></div>
+        <div data-montage-id="title" class="InspectorSectionTitle-title"></div>
+        <div data-montage-id="subtitle" class="InspectorSectionTitle-subtitle"></div>
     </div>
 </body>
 </html>
