--- a/ui/inspectors/cron-job.reel/cron-job.html
+++ b/ui/inspectors/cron-job.reel/cron-job.html
@@ -9,12 +9,161 @@
             "properties": {
                 "element": {"#": "owner"}
             }
+        },
+        "inspector": {
+            "prototype": "ui/inspectors/inspector.reel",
+            "properties": {
+                "element": {"#": "inspector"},
+                "isFooterHidden": true
+            }
+        },
+        "months": {
+            "prototype": "./cron-job-rule.reel",
+            "properties": {
+                "element": {"#": "months"},
+                "title": "Months",
+                "options": [
+                    {"value": "Jan"},
+                    {"value": "Feb"},
+                    {"value": "Mar"},
+                    {"value": "Apr"},
+                    {"value": "May"},
+                    {"value": "Jun"},
+                    {"value": "Jul"},
+                    {"value": "Aug"},
+                    {"value": "Sep"},
+                    {"value": "Oct"},
+                    {"value": "Nov"},
+                    {"value": "Dec"}
+                ]
+            }
+        },
+        "days": {
+            "prototype": "./cron-job-rule.reel",
+            "properties": {
+                "element": {"#": "days"},
+                "title": "Days",
+                "options": [
+                    {"value": "01"},
+                    {"value": "02"},
+                    {"value": "03"},
+                    {"value": "04"},
+                    {"value": "05"},
+                    {"value": "06"},
+                    {"value": "07"},
+                    {"value": "08"},
+                    {"value": "09"},
+                    {"value": "10"},
+                    {"value": "11"},
+                    {"value": "12"},
+                    {"value": "13"},
+                    {"value": "14"},
+                    {"value": "15"},
+                    {"value": "16"},
+                    {"value": "17"},
+                    {"value": "18"},
+                    {"value": "19"},
+                    {"value": "20"},
+                    {"value": "21"},
+                    {"value": "22"},
+                    {"value": "23"},
+                    {"value": "24"},
+                    {"value": "25"},
+                    {"value": "26"},
+                    {"value": "27"},
+                    {"value": "28"},
+                    {"value": "29"},
+                    {"value": "30"},
+                    {"value": "31"}
+
+                ]
+            }
+        },
+        "hours": {
+            "prototype": "./cron-job-rule.reel",
+            "properties": {
+                "element": {"#": "hours"},
+                "title": "Hours",
+                "options": [
+                    {"value": "00"},
+                    {"value": "01"},
+                    {"value": "02"},
+                    {"value": "03"},
+                    {"value": "04"},
+                    {"value": "05"},
+                    {"value": "06"},
+                    {"value": "07"},
+                    {"value": "08"},
+                    {"value": "09"},
+                    {"value": "10"},
+                    {"value": "11"},
+                    {"value": "12"},
+                    {"value": "13"},
+                    {"value": "14"},
+                    {"value": "15"},
+                    {"value": "16"},
+                    {"value": "17"},
+                    {"value": "18"},
+                    {"value": "19"},
+                    {"value": "20"},
+                    {"value": "21"},
+                    {"value": "22"},
+                    {"value": "23"}
+                ]
+            }
+        },
+        "Minutes": {
+            "prototype": "./cron-job-rule.reel",
+            "properties": {
+                "element": {"#": "minutes"},
+                "title": "Minutes",
+                "options": [
+                    {"value": "01"},
+                    {"value": "02"},
+                    {"value": "03"},
+                    {"value": "04"},
+                    {"value": "05"},
+                    {"value": "06"},
+                    {"value": "07"},
+                    {"value": "08"},
+                    {"value": "09"},
+                    {"value": "10"},
+                    {"value": "11"},
+                    {"value": "12"},
+                    {"value": "13"},
+                    {"value": "14"},
+                    {"value": "15"},
+                    {"value": "16"},
+                    {"value": "17"},
+                    {"value": "18"},
+                    {"value": "19"},
+                    {"value": "20"},
+                    {"value": "21"},
+                    {"value": "22"},
+                    {"value": "23"},
+                    {"value": "24"},
+                    {"value": "25"},
+                    {"value": "26"},
+                    {"value": "27"},
+                    {"value": "28"},
+                    {"value": "29"},
+                    {"value": "30"},
+                    {"value": "31"}
+
+                ]
+            }
         }
     }
     </script>
 </head>
 <body>
     <div data-montage-id="owner" class="CronJob">
+        <div data-montage-id="inspector">
+            <div data-montage-id="months" class="CronJob-months"></div>
+            <div data-montage-id="days" class="CronJob-days"></div>
+            <div data-montage-id="hours" class="CronJob-hours"></div>
+            <div data-montage-id="minutes" class="CronJob-minutes"></div>
+        </div>
     </div>
 </body>
 </html>
