updates foldable-section sample

--- a/ui/controls/foldable-section.info/sample/ui/main.reel/main.html
+++ b/ui/controls/foldable-section.info/sample/ui/main.reel/main.html
@@ -14,7 +14,7 @@
             }
         },
         "icons": {
-            "prototype": "gui/ui/icons.reel",
+            "prototype": "blue-shark/ui/icons.reel",
             "properties": {
                 "element": {"#": "icons"}
             }
